--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
     <ImageView
             android:src="@drawable/shape_ball"
             android:visibility="invisible"
-            android:layout_width="55dp"
+            android:layout_width="56dp"
             android:layout_height="74dp"
             android:id="@+id/imageView13"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
     <ImageView
             android:src="@drawable/shape_ball"
             android:visibility="invisible"
-            android:layout_width="59dp"
+            android:layout_width="56dp"
             android:layout_height="74dp"
             android:id="@+id/imageView12"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,19 +92,19 @@
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintHorizontal_bias="0.214"/>
 
-    <Button
-            android:text="@string/button_new"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button_new"
-            android:layout_marginTop="276dp"
-            app:layout_constraintTop_toTopOf="parent"
+    <ImageView
+            android:src="@drawable/usd"
+            android:visibility="invisible"
+            android:layout_width="113dp"
+            android:layout_height="92dp"
+            android:id="@+id/image_usd"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:onClick="newGame" app:layout_constraintVertical_bias="0.251"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="240dp"
+            app:layout_constraintHorizontal_bias="0.501"/>
+
 
 </android.support.constraint.ConstraintLayout>
